# conquest

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  premake5.lua
assets/: grammer.txt  package.toml
src/conquest/: CMakeLists.txt  Enum.h  Error.h  Main.cpp  Types.h
src/conquest/common/: Convert.h  Finally.h  Flag.h  Timer.cpp  Timer.h  Unicode.cpp  Unicode.h
src/conquest/common/data/: Expect.h  Stream.h
src/conquest/data/: Buffer.cpp  Buffer.h  Package.cpp  Package.h  Save.h  Toml.h  Vec.h
src/conquest/data/save/: SavePreview.cpp  SavePreview.h
src/conquest/data/storage/: AssetSingleton.h  Singleton.h
src/conquest/engine/: Constants.h  Rect.h  SyncLoop.cpp  SyncLoop.h  Types.cpp  Types.h
src/conquest/engine/console/: Console.cpp  Console.h
src/conquest/engine/sdl/: Rect.h  Sdl.cpp  Sdl.h  SdlError.cpp  SdlError.h
src/conquest/engine/ui/: Context.h  Manager.h  Ticker.cpp  Ticker.h
src/conquest/engine/window/: Context.h  Manager.h
src/conquest/game/battle/: WeaponType.cpp  WeaponType.h
src/conquest/game/character/: Character.cpp  Character.h  CharacterAttributes.cpp  CharacterAttributes.h  CharacterExperience.cpp  CharacterExperience.h  CharacterTraits.cpp  CharacterTraits.h  Stats.h
src/conquest/log/: ILogSink.h  Log.cpp  Log.h  LogMessage.h  LogMessageBuilder.cpp  LogMessageBuilder.h
src/conquest/log/sink/: LogFileSink.cpp  LogFileSink.h
src/conquest/scenes/newGame/: CharacterCreator.cpp  CharacterCreator.h  Intro.cpp  Intro.h
src/conquest/scenes/title/: TitleScreen.cpp  TitleScreen.h
(+181 files in other folders)
